; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce/extr_dce_clock_source.c_disable_spread_spectrum.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce/extr_dce_clock_source.c_disable_spread_spectrum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dce110_clk_src = type { %struct.TYPE_6__*, %struct.TYPE_4__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 (%struct.TYPE_6__*, %struct.bp_spread_spectrum_parameters*, i32)* }
%struct.bp_spread_spectrum_parameters = type { i32, i32 }
%struct.TYPE_4__ = type { i32 }

@BP_RESULT_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dce110_clk_src*)* @disable_spread_spectrum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @disable_spread_spectrum(%struct.dce110_clk_src* %0) #0 {
  %2 = alloca %struct.dce110_clk_src*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.bp_spread_spectrum_parameters, align 4
  store %struct.dce110_clk_src* %0, %struct.dce110_clk_src** %2, align 8
  %5 = bitcast %struct.bp_spread_spectrum_parameters* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %5, i8 0, i64 8, i1 false)
  %6 = load %struct.dce110_clk_src*, %struct.dce110_clk_src** %2, align 8
  %7 = getelementptr inbounds %struct.dce110_clk_src, %struct.dce110_clk_src* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = getelementptr inbounds %struct.bp_spread_spectrum_parameters, %struct.bp_spread_spectrum_parameters* %4, i32 0, i32 0
  store i32 %9, i32* %10, align 4
  %11 = load %struct.dce110_clk_src*, %struct.dce110_clk_src** %2, align 8
  %12 = getelementptr inbounds %struct.dce110_clk_src, %struct.dce110_clk_src* %11, i32 0, i32 0
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i32 (%struct.TYPE_6__*, %struct.bp_spread_spectrum_parameters*, i32)*, i32 (%struct.TYPE_6__*, %struct.bp_spread_spectrum_parameters*, i32)** %16, align 8
  %18 = load %struct.dce110_clk_src*, %struct.dce110_clk_src** %2, align 8
  %19 = getelementptr inbounds %struct.dce110_clk_src, %struct.dce110_clk_src* %18, i32 0, i32 0
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %21 = call i32 %17(%struct.TYPE_6__* %20, %struct.bp_spread_spectrum_parameters* %4, i32 0)
  store i32 %21, i32* %3, align 4
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* @BP_RESULT_OK, align 4
  %24 = icmp eq i32 %22, %23
  %25 = zext i1 %24 to i32
  ret i32 %25
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
